--- a/src/main/java/com/leonardo/GYM/view/IU_Accesos.form
+++ b/src/main/java/com/leonardo/GYM/view/IU_Accesos.form
@@ -123,7 +123,7 @@
                   </Group>
                   <EmptySpace pref="18" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="282" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnAcceso" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnInforme" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -177,10 +177,10 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="4">
-                    <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                    <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                    <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                    <Column editable="true" title="Title 4" type="java.lang.Object"/>
+                    <Column editable="false" title="ID_Acceso" type="java.lang.String"/>
+                    <Column editable="false" title="Tipo" type="java.lang.String"/>
+                    <Column editable="false" title="Fecha " type="java.lang.String"/>
+                    <Column editable="false" title="ID_Cliente" type="java.lang.String"/>
                   </Table>
                 </Property>
               </Properties>
